Prepare for ObjFW port

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ Maintainers:
         Tyler Burton <software@tylerburton.ca>
 
 Contributors:
+        Johannes Brakensiek <objfw@codingpastor.de> - Port to ObjFW
