Adjustment of string equality comparison et al

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,8 @@
-Maintainers:
+Author:
         Tyler Burton <software@tylerburton.ca>
 
-Contributors:
+Maintainers:
         Johannes Brakensiek <objfw@codingpastor.de> - Port to ObjFW
+
+Contributors:
+        
