Add js as contributor

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,4 @@ Maintainers:
         Johannes Brakensiek <objfw@codingpastor.de> - Port to ObjFW
 
 Contributors:
-        
+        Jonathan Schleifer <js@nil.im>
