--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ Author:
         Tyler Burton <software@tylerburton.ca>, 2015-2017 (CoreGTK)
 
 Maintainers:
-        Johannes Brakensiek <objfw@codingpastor.de>, 2021-2023 (ObjGTK)
+        Johannes Brakensiek <objfw@devbeejohn.de>, 2021-2023 (ObjGTK)
 
 Contributors:
         Sergey Bugaev <bugaevc@gmail.com>
